# prelim

./: !experiments.py  .gitignore  LICENSE  README.md  conftest.py  dt_make_illustration.py  dt_prepare_illustration.py  experiment.py  experiment_BI.py  experiment_bi_old.py  experiment_dt.py  experiment_dt_illustration.py  experiment_dt_notdone.py  experiment_fid_baseline.py  experiment_lr.py  experiment_prim.py  experiment_rules.py  experiment_rules_add.py  experiment_sd_add_notdone.py  experiment_ssl.py  experiments.py  experiments_notdone.py  prelim.py  pyproject.toml  read_results.py  read_results_bi.py  read_results_dt.py  read_results_dt_new.py  read_results_prim.py  read_results_rules.py  read_results_sd.py  requirements.txt  setup.cfg
data/: get_data.py
delete_next_version/: experiment_dt.py  experiment_rules.py  experiment_sd.py  read_results_rules.py
experiments/: README.md  config.py  experiments.py  get_data.py  read_results.py  requirements.txt  run.py
experiments/data/: __init__.py  split.py
experiments/evaluation/: __init__.py  phases.py
experiments/metamodels/: __init__.py  base.py  kriging.py  lgbm.py  lgbmb.py  nb.py  rf.py  rfb.py  svm.py  xgbb.py
experiments/results/: __init__.py  artifacts.py
experiments/utils/: data_loader.py  data_splitter.py  helpers.py
notebooks/: generators_demo.ipynb
src/: __init__.py  experiment.py  test.py
src/generators/: adasyn.py  dummy.py  gmm.py  kde.py  kdeb.py  kdem.py  munge.py  noise.py  perfect.py  rand.py  rerx.py  rfdens.py  smote.py  vva.py  vva_p.py
src/metamodels/: kriging.py  nb.py  rf.py  rfb.py  svm.py  xgb.py  xgbb.py
src/prelim/: __init__.py  prelim.py  requirements.txt
src/subgroup_discovery/: .Rhistory  BI.py  PRIM.py  PRIM_fast.R
src/utils/: data_loader.py  data_splitter.py  (+1 more)
test/: dummy_metamodel.py  test_experiment_utils_behavior.py  test_experiments_smoke.py  test_generator.py  test_generators_behavior.py  test_get_data_behavior.py  test_metamodels_behavior.py  test_prelim_behavior.py  test_read_results_smoke.py  test_sd_behavior.py
tests/: test_generators.py  test_utils.py
(+41 files in other folders)
