[metadata]
name = prelim
version = 0.0.1
author = Vadim
author_email = vadim.arzamasov@gmail.com
description = PRELIM package to reproduce experiments and use method.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Arzik1987/prelim
project_urls =
    Bug Tracker = https://github.com/Arzik1987/prelim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
