[metadata]
name = prelim
version = 0.0.1
author = Vadim Arzamasov, Benjamin Jochum
author_email = vadim.arzamasov@gmail.com
description = PRELIM package to reproduce experiments and use method.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Arzik1987/prelim
project_urls =
    Bug Tracker = https://github.com/Arzik1987/prelim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    auto_mix_prep==0.2.0
    imbalanced_learn==0.8.0
    imblearn==0.0
    numpy==1.20.1
    scikit_learn==1.0.1
    statsmodels==0.12.2


[options.packages.find]
where = src
